# system_greedy

./: .gitignore  Cargo.toml
input/: trim1200.csv  trimer_N1200_b700.mfsys
src/: algorithn_state.rs  element.rs  generators.rs  lib.rs  main.rs  matrix.rs  metropolis.rs  perebor.rs  runner.rs  system.rs  system_part.rs  utils.rs
