[package]
name = "system_greedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.15.4"
bitvec = "0.22.3"
num-traits = "0.2.14"
tap = "1.0.1"
plotters = "0.3"
rayon = "1.5.1"
prettytable-rs = "^0.8"
umya-spreadsheet = "0.7.0"
anyhow = "1.0"
ordered-float = "2"