[package]
name = "system_greedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.15.4"
ndarray = "0.15.4"
bitvec = "1"
num-traits = "0.2.14"
tap = "1"
plotters = "0.3"
rayon = "1"
prettytable-rs = "^0.8"
umya-spreadsheet = "0.7.0"
anyhow = "1.0"
ordered-float = "2"
approx = "0.5.1"
itertools = "0.10.3"
rand = "0.8.5"
csv = "1.1"