[package]
name = "system_greedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.15"
bitvec = "1"
num-traits = "0.2"
tap = "1"
plotters = "0.3"
rayon = "1"
anyhow = "1"
ordered-float = "2"
approx = "0.5"
rand = "0.8"
measure_time = "0.8"
image = "0.24"
iced = { version = "0.4", default-features = false, features = ["glow", "canvas", "tokio"] }
quadtree-f32 = "0.4"
native-dialog = { version = "0.6", features = ["windows_dpi_awareness", "windows_visual_styles"] }
mpi = { git = "https://github.com/rsmpi/rsmpi.git", default-features = false }
ctrlc = { version = "3.0", features = ["termination"] }
itertools = "0.10"
lazy_static = "1"
structopt = "0.3"